# configparser-black

./: LICENSE  README.md  pyproject.toml
cblack/: __init__.py  __main__.py  runner.py
cblack/config/: base.py  ini.py  pyprojecttoml.py  setupcfg.py  tox.py
cblack/utils/: files.py  ini.py  out.py  proc.py
